fix discount z-index

--- a/src/components/cart/cart.scss
+++ b/src/components/cart/cart.scss
@@ -19,7 +19,7 @@
     }
     .discount {
       position: absolute;
-      z-index: 20;
+      z-index: 4;
       background-color: #e91e63;
       color: #fff;
       font-size: 12px;
